(PC-13921)[PRO] fix: remove condition in recap bookings table for status filters and align head columns

--- a/pro/src/styles/components/pages/Bookings/BookingsRecapTable/Table/Head/_Head.scss
+++ b/pro/src/styles/components/pages/Bookings/BookingsRecapTable/Table/Head/_Head.scss
@@ -9,6 +9,11 @@
       min-height: rem(60px);
       padding: rem(14px);
       vertical-align: middle;
+      text-align: left;
+
+      .status-filter {
+        padding-left: 0;
+      }
 
       .sorting-icons {
         display: inline-block;
